# felipeomar.github.io

./: _config.yml  index.html  index.md  index1.md  map.geojson  p.txt  significant_month.csv
instalacoes_eletricas/: asciidoctor.css  instalacoes.adoc  instalacoes.html
modelo_base/site/: site.adoc  site.html  ubuntu.css
projects/negative_image/: asciidoctor.css  negative_image.adoc  negative_image.html
projetos/labelling_bubbles/codes/: CMakeCache.txt  CMakeLists.txt  Makefile  labelling_bubbles  labelling_bubbles.cpp
projetos/negative_image/: Gemfile  negative_image.adoc  negative_image.html
projetos/replace_regions/: asciidoctor.css
projetos/replace_regions/codes/: CMakeLists.txt  Makefile  replace_regions
qgis2web_2019_08_26-21_44_55_661350/: index.html
qgis2web_2019_08_26-21_44_55_661350/layers/: ARAT_1.js  CONJ_2.js  PONNOT_7.js  SSDAT_4.js  SSDBT_6.js  SSDMT_5.js  SUB_3.js  UCAT_8.js  UCBT_10.js  UCMT_9.js  UGAT_11.js  UGBT_13.js  UGMT_12.js  UNCRAT_14.js  UNCRBT_16.js  UNCRMT_15.js  UNREAT_17.js  UNREMT_18.js  UNSEAT_21.js  UNSEBT_19.js  UNSEMT_20.js  UNTRD_22.js  UNTRS_23.js  layers.js
qgis2web_2019_08_26-21_44_55_661350/resources/: qgis2web.js
qgis2web_2019_08_26-21_44_55_661350/styles/: ARAT_1_style.js  CONJ_2_style.js  PONNOT_7_style.js  SSDAT_4_style.js  SSDBT_6_style.js  SSDMT_5_style.js  SUB_3_style.js  UCAT_8_style.js  UCBT_10_style.js  UCMT_9_style.js  UGAT_11_style.js  UGBT_13_style.js  UGMT_12_style.js  UNCRAT_14_style.js  (+9 more)
tutorials/: asciidoctor.css  install_opencv.adoc  install_opencv.html  tutorial_install_opencv.md  ubuntu.css
(+86 files in other folders)
